# KubeOps

./: .countlines.cache.db  .editorconfig  .env.example  .gitignore  DELTA_MANIFEST.json  IMPLEMENTATION_MANIFEST.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  SOURCE_MANIFEST.json  VALIDATION.md  directory_structure.txt  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-runtime.txt
control_plane/: Dockerfile  pyproject.toml
control_plane/api/: audit.py  governance.py  middleware.py  models.py  permissions.py  release_10.py  scheduling.py  scoping.py  services.py  urls.py  views.py
control_plane/api/management/commands/: create_platform_backup.py  restore_platform_backup.py  run_executor_agent.py  run_operation_scheduler.py  seed_release_01.py  seed_release_02.py  seed_release_04.py  seed_release_05.py  seed_release_10.py
control_plane/api/migrations/: 0001_initial.py  0002_release_02_read_only_intelligence.py  0003_release_03_read_only_diagnosis.py  0004_release_04_guarded_lifecycle.py  0005_release_05_knowledge_packs.py  0006_release_10_production_control_plane.py
control_plane/config/: settings.py
docs/: architecture-release-01.md  architecture-release-02.md  architecture-release-03.md  architecture-release-04.md  architecture-release-05.md  architecture-release-10.md  pack-authoring.md  production-operations.md
environments/: demo-kind-fixture.v1.yaml  demo-pack-stack-fixture.v1.yaml
fleets/: demo-fleet.v1.yaml
governance/: default-limits.v1.yaml  default-maintenance-windows.v1.yaml  default-retention.v1.yaml
(+118 files in other folders)
