[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubeops-control-plane"
version = "0.4.0"
description = "Django API and persistence layer for KubeOps Release 0.4"
requires-python = ">=3.11"
dependencies = [
  "kubeops-core>=0.4.0",
  "Django>=5.2,<5.3",
  "djangorestframework>=3.15,<4",
  "django-cors-headers>=4.7,<5",
  "dj-database-url>=2.3,<3",
  "psycopg[binary]>=3.2,<4",
  "python-dotenv>=1.0,<2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "api*"]
